# sdk-examples

./: .gitignore  .gitmodules  README.md  replay_to_nerf.py
cpp/common/: serialize_output.cpp  serialize_output.hpp
cpp/k4a/: CMakeLists.txt  README.md  build_windows.sh  mapping_visu.cpp  vio_jsonl.cpp
cpp/k4a/cmake/: Findk4a.cmake  spectacularAI_k4aPluginConfig.cmake
cpp/mapping_visu/: CMakeLists.txt  README.md  mapping_visu.cpp  serialize_output.hpp
cpp/oak/: CMakeLists.txt  README.md  vio_jsonl.cpp  vio_replay.cpp
cpp/offline/: CMakeLists.txt  README.md  ffmpeg.hpp  input.cpp  input.hpp  plot_positions.py  vio_jsonl.cpp
cpp/orbbec/: CMakeLists.txt  README.md  build_windows.sh  main.cpp  mapping_visu.cpp  vio_jsonl.cpp
cpp/realsense/: CMakeLists.txt  README.md  helpers.hpp  mapping_visu.cpp  vio_jsonl.cpp  vio_mapper.cpp  vio_mapper_legacy.cpp  vio_record.cpp
cpp/replay/: CMakeLists.txt  README.md  replay.cpp
cpp/rtabmap/: .gitignore  CMakeLists.txt  README.md  rtabmap_config.ini
cpp/rtabmap/include/spectacularAI/rtabmap/: camera_availability.h  camera_availability.h.in  camera_k4a.h  camera_oak.h  camera_realsense.h  camera_replay.h  camera_spectacularai.h  map_builder.h  util.h  util3d.h
cpp/rtabmap/src/: camera_k4a.cpp  camera_oak.cpp  camera_realsense.cpp  camera_replay.cpp  camera_spectacularai.cpp  main.cpp  util.cpp  util3d.cpp
python/: replay_to_gaussian_splatting.py
python/mapping/: README.md  mapping_visu.py  record_and_process_oak_d.sh  replay_to_instant_ngp.py  replay_to_nerf.py  requirements.txt
python/mapping/common/: deserialize_output.py
python/mapping/visualization/: visualizer.py
python/mapping/visualization/visualizer_renderers/: mesh.frag  mesh.py  mesh.vert  point_cloud.frag  point_cloud.py  point_cloud.vert  renderers.py  util.py
python/oak/: README.md  april_tag.py  depthai_combination.py  depthai_combination_install.sh  mapping.py  mapping_ar.py  mapping_ros.py  mapping_visu.py  mixed_reality.py  mixed_reality_fhd.py  mixed_reality_replay.py  mixed_reality_replay_gnss.py  pen_3d.py  relocalize_apriltags.py  requirements.txt  vio_gnss.py  vio_hooks.py  vio_jsonl.py  vio_record.py  vio_replay.py  vio_visu.py
python/oak/common/: deserialize_output.py
python/oak/mapping_ar_renderers/: invert4x4.py  mesh.frag  mesh.py  mesh.vert  point_cloud.frag  point_cloud.py  point_cloud.vert  util.py
python/oak/ros2/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
python/oak/ros2/launch/: mapping.py  mapping.rviz
python/oak/ros2/spectacularai_depthai/: ros2_node.py
